# history

account/: Makefile  README.md  go.mod  go.sum  stack.yml
account/cmd/account/: main.go
account/configs/account/: account.json
account/features/: environment.py  login.feature  register.feature
account/features/steps/: login.py  mysqldb.py  rediscache.py  register.py
account/internal/account/: account.go  (+3 more)
calculator/c++/: CMakeLists.txt  calculator.cpp  calculator.h  case.txt  test_calculator.cpp
codepool/: README.md
docker/ghost/: Dockerfile  Makefile  stack.yml
docker/nginx/: stack.yml
docker/openldap/: Dockerfile  Makefile  README.md  stack.yml
easygolang/: glide.yaml
easygolang/cache/: redis.go  redis_test.go
easygolang/datastruct/: bitset.go  bitset_test.go  syncmap_uint64_string.go  syncmap_uint64_string_test.go
easygolang/filewatcher/: filewatcher.go  filewatcher_test.go
easygolang/hashopt/: hashopt_test.go  string_hasher_bkdr_test.go  string_hasher_djb_test.go
easygolang/pprof/: pprof.go
go-kit/: go.mod  go.sum
go-kit/filesystem/: file_watcher.go  file_watcher_test.go
go-kit/hashopt/: string_hasher_bkdr.go  string_hasher_bkdr_fixed.go  string_hasher_bkdr_fixed_test.go  string_hasher_djb.go
go-kit/scripts/: consul.py  cpu_threshold.json  factor_map.json  machine_factor.json  zone_cpu.json  zone_cpu.py
go-kit/util/: ip.go  ip_test.go  signal.go
hatlonely/xiaoke/: package.json
hatlonely_code_lib/: README.md
hatlonely_code_lib/cplusplus/configure/: CMakeLists.txt
hatlonely_code_lib/cplusplus/configure/conf/: configure_sample.conf  sublime_text.conf
hatlonely_code_lib/cplusplus/configure/include/: config_parser.h  configure.h  json_parser.h
hatlonely_code_lib/cplusplus/configure/src/: configure.cpp  json_parser.cpp
hatlonely_code_lib/cplusplus/configure/test/: test_configure.cpp
hatlonely_code_lib/python/: usejson.py
hatlonely_code_lib/shell/: figlet_font.sh
hclould/: .gitignore  README.md  everything.sh
hclould/conf/: hclould.json
hellothird/: .gitignore  go.mod  go.sum
hellothird/redis/: README.md
hellowords/: README.md
hellowords/c++/: CMakeLists.txt
hellowords/c++/include/: hellowords.h
hellowords/c++/src/: hellowords.cpp  main.cpp
hellowords/c++/test/: CMakeLists.txt  test_hellowords.cpp
hellowords/data/: one.txt  wikiquote.txt
hellowords/javascript/: hellowords.js
hellowords/php/: index.php  soapserver.php
hellowords/python/: app.py
hellowords/tools/: one.js  wikiquote.py  wikiyearquote.py
helloworld/: .gitignore  README.md
helloworld/HelloGo/: .gitignore  everything.sh
helloworld/HelloPython/: hello_datetime.py  hello_flask.py  hello_httplib2.py  hello_json.py  hello_pyquery.py  hello_re.py  hello_redis.py  hello_subprocess.py  redis_mass_insert.py
hlib/c++/blocking_queue/test/: CMakeLists.txt  test_blocking_queue.cpp
hlib/c++/data_struct/test/: CMakeLists.txt  test_linked_list.cpp
hlib/c++/thread_pool/test/: CMakeLists.txt  test_thread_pool.cpp
hservices/: .gitignore  everything.sh
hservices/conf/: hservices.json
hservices/src/: glide.yaml
hstat/: everything.sh
hstat/code/: codestat.py  main  mcode.txt  mreport.py  munit.txt  projects.txt
htech/: 工具-aws.md  工具-mac.md  工具-markdown.md  工具-nginx.md  工具-邮件.md  开发-Go单元测试.md  技术-logstash-kafka-logstash.md  规范-开发.md  规范-编码.md  规范-项目.md
htool/: .gitignore  config_template.py  everything.sh  hclient  hcodestat  hinstall  hip  hmd2html  hop_elasticsearch  hop_kafka  hop_kibana  hop_logstash  hpipe  hproj  hreport  hsendmail  htechstat  htechstat_report  kafkaclient  sendmail.conf
httproxy/: .gitignore  README.md  everything.sh
httproxy/src/: glide.yaml
jobs/csv_inflection_point/: csv_inflection_point.py
lab/chinese_string_up_puzzle/: idiom.py  idiom.txt  spider.py
minions/: source_me.sh
minions/data_analyst/: README.md  analyst.py  create_test_data.py  download.sh  format_log.py  html_maker.py  select.py  table_maker.py  usage_demo.sh
minions/install/: git_clone_all.sh  hget.sh
minions/md2html/: README.md  md2html  package.json  style.css
minions/preferences/: Preferences.sublime-settings
minions/rand/: rand.py
minions/tools/: is_same.sh  md2html.sh  unixtime  www  xlsx2csv.py
minions/tplmake/: README.md  tplmake.py
note/note/: k8s-coredns-安装.md  k8s-dashboard-安装.md  k8s-ingress-安装.md  k8s-jenkins-安装.md  k8s-prometheus-安装.md  mac-mini-centos-8-安装.md
notebook/: README.md  drawhl.js  hatlonely-note.css  md2html.js
notebook/culture/: 未选择的路.md
notebook/fengcao/: 凤巢模块.md  百度商业产品概述.md  百度搜索推广入门指南.md
notebook/hatlonely/: book.md  detailed_designed_document_templale.md  node_express_blog.md
notebook/ios/: learn_objective_c_on_the_mac_for_ox_x_and_ios.md
notebook/it/: codemaster.md  simple_and_usable_web_mobile_and_interaction_design.md  代码风格.md
notebook/life/: backpacker.note
notebook/linux/: file_join.md  iptables.md  library.md  linux.md  samba.md  selinux.md  shell.md  software.md  vsftpd.md  wget.md
notebook/math/: 深入浅出统计学.md
notebook/servers/: mysql.note
notebook/tools/: automake.md  figlet.md  github.md  gtest.md  kindle.md  markdown.md  markdownpad_evernote_github.md  r.md  sublime_nodejs_markdown_evernote.md  sublime_text.md  svn.md  valgrind.md  vim.md
notebook/web/: esl_and_etpl.md  javascript_the_definitive_guide.md
public/techtree/: flare.json  index.html
sample/cpp_proj_sample/: everything.sh
sample/python/: hash_conflict_test.py
sit_boy/: README.md
sit_boy/sit_boy/: app.js  package.json
spider/: package.json
spider/china_database/: china_area_spider.js  create_chinadb.sql
spider/dota2/: create_dota2_table.sql  dota2_heroes.js  dota2_heroes_chinese.js
spider/heartstone/: heartstone_card_spider.py
spider/national_geographic/: national_geographic.py
tools/: README.md  formatint  hash  hostinfo  hsh  install  mongoid  resource  template
tools/templates/: Makefile
webbe/: .gitignore  everything.sh
webbe/sql/: article_views.sql
webbe/src/: glide.yaml
webfe/: package.json
webfe/routes/: index.js
webfe/views/: article.ejs  doclist.ejs
(+143 files in other folders)
